--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.datasource.url= jdbc:mysql://localhost:3306/item_ku?useSSL=false
+spring.datasource.username= root
+spring.datasource.password=
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto= update
+server.port = 8089
+#server.host = 172.17.0.43
+server.host = 127.0.0.1
+#server.host = 192.168.100.96
